...

  render () {
    return (
      <View style={{justifyContent: 'center'}}>
        <Form>
          <Item inlineLabel>
            <Input placeholder={'Email'} onChange={event => this.handleInputChange(event, 'email')} testID={"Email-input"} keyboardType={'email-address'}/>
          </Item>
          <Item inlineLabel>
            <Input
              placeholder={'Password'}
              onChange={event => this.handleInputChange(event, 'password')}
              value={this.state.password}
              secureTextEntry
              testID={"Password-input"}
            />
          </Item>
        </Form>
        <View style={{flexDirection: 'row', marginTop: 30}}>
        <Button primary rounded style={buttonStyle} onPress={() => this.props.emailSignUp(this.state.email,this.state.password)} testID={'SignUp-Button'}>
            <Text style={buttonTextStyle}>Sign Up</Text>
          </Button>
          <View style={{width: 28}} />
          <Button primary rounded style={buttonStyle} onPress={() => this.props.emailLogIn(this.state.email,this.state.password)} testID={'Login-Button'}>
            <Text style={buttonTextStyle}>Log in</Text>
          </Button>
        </View>
      </View>
    )
  }
...
